feat#129: 사용자 클릭 기반 UX로 수정 (예외처리 추가)